# trabalhos-escolares-automaticos

./: LICENSE  README.md  credentials.py  main.py  pyproject.toml  requirements.txt  sumarizacao.py
GUI/: index.html  page2.html
requirements/: install_all.bat  requirements.txt
